fix overflow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body,
 html {
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
